--- a/ubuntu_utils/Dockerfile
+++ b/ubuntu_utils/Dockerfile
@@ -4,4 +4,4 @@ RUN \
   apt-get update && \
   apt-get -y upgrade && \
   apt-get install -y build-essential && \
-  apt-get install -y curl vim wget host nslookup
+  apt-get install -y curl vim wget host dnsutils
