--- a/yaml/ubuntu_apps.yaml
+++ b/yaml/ubuntu_apps.yaml
@@ -6,5 +6,5 @@ metadata:
     app: ubuntu-apps
 spec:
   containers:
-  - image: robinlinacre/docker_k8s_test_del:ubuntu
+  - image: robinlinacre/docker_k8s_test_del:ubuntu_utils
     name: ubuntu-apps
