--- a/ubuntu_utils/Dockerfile
+++ b/ubuntu_utils/Dockerfile
@@ -5,3 +5,5 @@ RUN \
   apt-get -y upgrade && \
   apt-get install -y build-essential && \
   apt-get install -y curl vim wget host dnsutils
+
+CMD ["sleep infinity"]
