--- a/ubuntu_utils/Dockerfile
+++ b/ubuntu_utils/Dockerfile
@@ -6,4 +6,4 @@ RUN \
   apt-get install -y build-essential && \
   apt-get install -y curl vim wget host dnsutils
 
-CMD ["sleep infinity"]
+CMD ["sleep", "infinity"]
